@@ -10,6 +10,7 @@
 
 
 Version 4.2.1
+ - Fixed: [ 2672126 ] Media Highlight/Thumb selectors not shown to editing users (canajun2eh)
  - Fixed: Log Error: admin - ERROR 8: Undefined index: small; (windmillway)
  - Changed: removed superfluous "add unlinked note" link on notelist.php page (windmillway)
  - Changed: removed superfluous "add unlinked note/source" link on find.php pop-up (windmillway)
